feat : 모니터링 api 스팩 및 swagger 추가
